Set the navigation bar to fixed, changed colors to imporve contrast

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,13 @@
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 /*Navigation Menu*/
+nav{
+    position: fixed;
+    width:100%;
+    background-color: white;
+    height: 75px;
+    z-index: 1;
+}
 #logo{
     float: left;
     margin-left: 10%;
@@ -14,10 +21,8 @@
 #active{
     border-bottom: 1px solid #63b0a6;
 }
-/*Navigation*/
 #menu{
     font-size: 110%;
-    /*float: right;*/
     margin-right: 10%;
     letter-spacing: 4px;
     height: 100px;
@@ -32,25 +37,24 @@
 }
 #menu a{
     text-decoration: none;
-    color:#63b0a6;
+    color:#636363;
     font-weight: 600;
 }
 #menu a:hover{
-    border-bottom: 1px solid #63b0a6;
+    border-bottom: 2px solid #63b0a6;
 }
 /*Content*/
-#top-section{
-    height:750px;
-}
 #hero-placeholder{
     width:80%;
     height:400px;
     background-color:#63b0a6;
     margin-left: 10%;
 }
-/*div .hero-img{
-    margin-left: 29%;
-}*/
+#top-section{
+    position: relative;
+    height:750px;
+    top: 75px;
+}
 #left-pane{
     width: 30%;
     float: left;
@@ -64,34 +68,31 @@
 #right-pane a{
     display: block;
     width: 300px;
-    padding-top:30px;
+    padding-top:25px;
     padding-bottom: 30px;
     background-color: #63b0a6;
     text-align: center;
     color: white;
     border-radius: 40px;
     margin-top: 40px;
-    font-size: 110%;
+    font-size: 130%;
     font-weight: 600;
 }
 
 p{
     margin:10px;
     padding: 10px;
-    color: gray;
+    color:#636363;
 }
 div > ul{
     margin-left: 50px;
-    color: gray;
+    color: #636363;
 }
 footer{
     width: 80%;
-    height: 100px;
-    background-color: #63b0a626;
-    position: fixed;
-    bottom: 0px;
     margin-left: 10%;
-    margin-bottom: 10px;
+    height: 100px;
+    background-color: #63b0a6;
 }
 footer p{
     width:25%;
